/**
 * generated by Xtext 2.38.0
 */
package org.xtext.example.mydsl.myDsl;

import org.eclipse.emf.common.util.EList;

/**
 * <!-- begin-user-doc -->
 * A representation of the model object '<em><b>Mission</b></em>'.
 * <!-- end-user-doc -->
 *
 * <p>
 * The following features are supported:
 * </p>
 * <ul>
 *   <li>{@link org.xtext.example.mydsl.myDsl.Mission#getDroneGroup <em>Drone Group</em>}</li>
 *   <li>{@link org.xtext.example.mydsl.myDsl.Mission#getActions <em>Actions</em>}</li>
 *   <li>{@link org.xtext.example.mydsl.myDsl.Mission#getConstraints <em>Constraints</em>}</li>
 * </ul>
 *
 * @see org.xtext.example.mydsl.myDsl.MyDslPackage#getMission()
 * @model
 * @generated
 */
public interface Mission extends Entity, ActionElement
{
  /**
   * Returns the value of the '<em><b>Drone Group</b></em>' reference.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @return the value of the '<em>Drone Group</em>' reference.
   * @see #setDroneGroup(DroneGroup)
   * @see org.xtext.example.mydsl.myDsl.MyDslPackage#getMission_DroneGroup()
   * @model
   * @generated
   */
  DroneGroup getDroneGroup();

  /**
   * Sets the value of the '{@link org.xtext.example.mydsl.myDsl.Mission#getDroneGroup <em>Drone Group</em>}' reference.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @param value the new value of the '<em>Drone Group</em>' reference.
   * @see #getDroneGroup()
   * @generated
   */
  void setDroneGroup(DroneGroup value);

  /**
   * Returns the value of the '<em><b>Actions</b></em>' containment reference.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @return the value of the '<em>Actions</em>' containment reference.
   * @see #setActions(ActionExpression)
   * @see org.xtext.example.mydsl.myDsl.MyDslPackage#getMission_Actions()
   * @model containment="true"
   * @generated
   */
  ActionExpression getActions();

  /**
   * Sets the value of the '{@link org.xtext.example.mydsl.myDsl.Mission#getActions <em>Actions</em>}' containment reference.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @param value the new value of the '<em>Actions</em>' containment reference.
   * @see #getActions()
   * @generated
   */
  void setActions(ActionExpression value);

  /**
   * Returns the value of the '<em><b>Constraints</b></em>' reference list.
   * The list contents are of type {@link org.xtext.example.mydsl.myDsl.ConstraintClasses}.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @return the value of the '<em>Constraints</em>' reference list.
   * @see org.xtext.example.mydsl.myDsl.MyDslPackage#getMission_Constraints()
   * @model
   * @generated
   */
  EList<ConstraintClasses> getConstraints();

} // Mission
